--- a/income.html
+++ b/income.html
@@ -84,7 +84,7 @@
 
 
         let abcd = (id) => {
-            alert(id)
+            // alert(id)
         }
 
         let pageNum = 1; //页码
@@ -93,7 +93,7 @@
              * 上拉加载具体业务实现
              */
         function pullupRefresh(type) {
-            alert(type)
+            // alert(type)
             console.log(type)
             type = type || 'all'
             let list = []
