--- a/recharge.html
+++ b/recharge.html
@@ -209,7 +209,7 @@
                         paySign: wxPayData.paySign, // 支付签名
                         success: function(res) {
                             // alert('支付成功！' + JSON.stringify(res))
-                            location.href = '/WEB/宜安客app钱包充值成功.html'
+                            location.href = `/WEB/宜安客app钱包充值成功.html?price=$("#money").val()`
                                 // 支付成功后的回调函数
                         },
                         cancel: function(res) {
